# zmailer

./: ChangeLog  FAQ  INSTALL  MANIFEST  Makefile  Makefile.in  Overview  README  README.CRYPTO  README.LICENSES  README.MXVERIFY  README.PERFORMANCE  README.SPAM  README.TCP-WRAPPER  README.UPGRADING  README.rayan  SiteConfig.in  TODO  acconfig.h  aclocal.m4  config.h.in  config.status  configure  configure.in  mkinstalldirs
LICENSES/: LIBRESOLV.README  README
compat/: Makefile.in
conf/: README  conf.1  conf.2  conf.3  conf.4  conf.5  conf.mea-linux-pedant  conf.tele-fi
contrib/: README.debian  alexis.patch  bix.patch  canonicalize  canonicalize.cf  canonicalize.cf.uploaderinfo  canonicalize.uploaderinfo  crontab  pakrat.patch  policy-summarizer.PERL  policy-summarizer.mail  postinst  spamlist.py  spamlist_sources  t.zm  whoson-1.05.tgz  whoson-1.08.tgz  whoson-imap-4.1.BETA-98-Jun-03.diff  whoson-protocol.txt  whoson-radius-2.4.23c.diff  zm-policybuilder.patch  zmailcheck  zmailer-kstat-mbox.pl  zmailer49.spec  zmailstats  zmailstats.8  zmailstats.new  zmm
debian/: README.Debian  changelog  control  copyright  cron.d  dirs  docs  init.d  postinst  postrm  preinst  rules
doc/: Makefile.in  aix-bsdport.ps  toplevel-domains  zmdirs.fig  zmnewsched1.fig  zmsched1.fig  zmsched1.ps
include/: dnsgetrr.h  hostenv.h  libc.h  libsh.h  libz.h  listutils.h  mail.h.in  mailer.h  malloc.h  md5-global.h  md5.h  memtypes.h  netdb6.h  policy.h  shmmib.h  sieve.h  sleepycatdb.h  splay.h  sysexits.h  sysprotos.h  ta.h  token.h  vis.h  zmalloc.h  zmclib.h  zmpoll.h  zmsignal.h  zresolv.h  zsyslog.h
intl/: Makefile.in
lib/: Makefile.in  allocate.c  cfgets.c  cleanenv.c  crc32.c  dbpwdgrp.c  detach.c  die.c  dottedquad.c  emalloc.c  esyslib.c  fdpassing.c  fdstatfs-test.c  fdstatfs.c  hashtest.c  hostent.c  isterminal.c  killprev.c  linebuffer.c  loginit.c  nobody.c  parseintv.c  pjwhash32.c  prversion.c  pwdgrp.c  ranny.c  resources.c  rfc822date-test.c  rfc822date.c  rfc822scan.c  selfaddrs.c  skip821address.c  sleepycatdb.c  splay.c  stringlib.c  strlower.c  strmatch.c  strupper.c  symbol.c  taspoolid.c  (+8 more)
libc/: Makefile.in  __fopen.c  fullname.c  gai_strerror.c  getaddrinfo-113.c  getaddrinfo-121.c  getaddrinfo-122.c  getaddrinfo-126.c  getaddrinfo-test.c  getaddrinfo.c  getdtblsiz.c  getnameinfo-002.c  getnameinfo-120.c  getnameinfo-132.c  getnameinfo.c  getopt.c  getzenv.c  in6addr_any.c  in6addr_loopback.c  inet_ntop.c  inet_pton.c  mail.c  mail_alloc.c  mail_host.c  mailvars.c  md5c.c  myhostname.c  qsort.c  setregid.c  setreuid.c  setvbuf.c  sfmail.c  strchr.c  strerror.c  strrchr.c  strsignal.c  strtoul.c  syslog.c  whathost-test.c  whathost.c
libident/: ChangeLog  Makefile.in  README  identuser.3  identuser.c  identuser.h
libmalloc/: CHANGES  Makefile.in  _emalloc.c  _malloc.c  _memalign.c  _strdup.c  _strsave.c  align.h  assert.h  botch.c  defs.h  dumpheap.c  emalloc.c  externs.h  getmem.c  globals.c  globals.h  globrename.h  leak.c  malloc.c  malloc.doc  malloc.h  maltrace.c  memalign.c  setopts.c  simumalloc.c  stats.c  strdup.c  strsave.c  testmalloc.c  teststomp.c  verify.c  version.c
libresolv/: 00README  Makefile.in  gethnamaddr.c  getnetbyaddr.c  getnetbyname.c  getnetent.c  getnetnamadr.c  herror.c  hostnamelen.c  inet_addr.c  inet_ntoa.c  inet_ntop.c  inet_pton.c  netdb.h  nsap_addr.c  portability.h  res_comp.c  res_data.c  res_debug.c  res_init.c  res_mkquery.c  res_query.c  res_send.c  resolv.h  sethostent.c
libs/: Makefile.in  sta05127
libsh/: Makefile.in  README  builtins.c  execute.c  expand.c  flags.h  interpret.c  interpret.h  io.c  io.h  jobcontrol.c  listmalloc.c  listtrees.c  listutils.c  mail.c  main.c  optimizer.c  path.c  prompt.c  regex.c  regex.h  sh.h  sh.ssl  shconfig.h  sift.h  sslwalker.c  strcspn.c  test.c  test.c.try  trap.c  tregexp.c  tregexp.h  try.zmsh  variables.c  vcall.c  waittest.c  zmsh.c
m4/: zm-func-getmntent-more.m4  zm-func-sprintf.m4  zm-func-statvfs.m4  zm-func-svr4-maillock.m4  zm-struct-dirent-d-ino.m4  zm-struct-sa-len.m4  zm-struct-tm-gntoff.m4
man/: Makefile.in  aliases.5.in  aliases.5.ps  authuser.3.in  authuser.3.ps  errormail.8.in  errormail.8.ps  expirer.8.in  expirer.8.ps  hold.8.in  hold.8.ps  mailbox.8.in  mailbox.8.ps  mailq-m-generate.pl  mailq.1.in  mailq.1.ps  mailrm.1.in  mailrm.1.ps  makedb.8.in  man-index.sh  man-to-html.sh  manual-expirer.8.in  manual-expirer.8.ps  manual-rerouter.8.in  mboxpath.1.in  mboxpath.1.ps  mprobe.8.in  mprobe.8.ps  newaliases.1.in  newaliases.1.ps  newdb.8.in  reroute.8.in  rmail.1.in  rmail.1.ps  router.8.in  router.8.ps  scheduler.8.in  scheduler.8.ps  sendmail.8.in  sendmail.8.ps  (+18 more)
packaging/: Makefile.in
po/: ChangeLog  Makevars
proto/: Makefile.in  fullnamealiasmaker.perl  mailrm.sh.in  newaliases.in  newdb.in  newdbprocessor.in  newfqdnaliases.in  post-install.sh.in  scheduler.auth  scheduler.auth.in  scheduler.conf.in  sm.conf.in  smtp-tls.conf  smtp-tls.conf.in  smtpserver.conf  smtpserver.conf.in  zmailer.sh.in
router/: .gdbinit  123awfull  Makefile.in  conf.c  daemonsub.c  dateparse.c  db.c  functions.c  prototypes.h  rfc822.c  rfc822.ssl  rfc822hdrs.c  rfc822test.c  rfc822walk.c  router.c  router.h  rtsyslog.c  shliaise.c  unvis.c  vis.c
scheduler/: BUGS  CONFIGURING  INTERNALS  MAILQ-V2  Makefile.in  agenda.c  conf.c  globtest.c  local-host-randomizer.c  mailq.c  mailq.inc  mailq.pl  mq2.c  mq2auth.c  msgerror.c  pipes.c  prototypes.h  qprint.c  readconfig.c  scheduler.c  scheduler.conf  scheduler.h  servauth.c  servauth.h  statuslog-ids-to-spoolids.pl  threads.c  transport.c  update.c  wantconn.c  zmdirs.ps  zmnewsched1.ps
sfio/: Makefile.in  README  sfio.3.ps  sfio_1999.src.unix.README
sfio2002/: README  p1.ps  p2.ps  sfio_2002.src.unix_tar.README.txt
smtpserver/: 821.ref  Makefile.in  README.translation  cfgread.c  contentpolicy.c  debugreport.c  libwhoson.c  loadaver.c  mxverify.c  policytest.c  policytest.h  rbltest.txt  readpolicy.c  rfc821scn.c  smtp-perl-hooks-pl.in  smtpauth-sasl.c  smtpauth.c  smtpchild.c  smtpcmds.c  smtpdata.c  whoson.h  (+17 more)
(+573 files in other folders)
